added the first blog

--- a/my-2nd-github.html
+++ b/my-2nd-github.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>2nd-github</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>My 2nd GitHub Page</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome to My 2nd GitHub Page</h2>
+            <p>This is a simple page to demonstrate my second GitHub project.</p>
+        </section>
+        <section>
+            <h3>About This Project</h3>
+            <p>This project showcases my skills in HTML and CSS.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 My 2nd GitHub Page</p>
+    </footer>
 </body>
 </html>
